[package]
name = "waku-discv5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
anyhow = "1.0.69"
bytes = "1.4.0"
ctr = "0.9.2"
lru_time_cache = "0.11.11"
strum = { version = "0.24.1", features = ["strum_macros"] }
strum_macros = "0.24.3"
thiserror = "1.0.38"

[dev-dependencies]
assert_matches = "1.5.0"
hex-literal = "0.3.4"
