[package]
name = "waku-enr"
description = "Waku v2 ENR"
version = "0.1.0"
edition = "2021"
authors = ["Lorenzo Delgado <lnsdev@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bitflags = "1.3.2"
enr = { version = "0.7.0", features = ["ed25519", "k256"] }
multiaddr = { version = "0.17.0", default-features = false }
serde = "1.0.150"

[dev-dependencies]
base64 = "0.20.0"
