[package]
name = "waku-enr"
description = "Waku v2 ENR"
version = "0.1.0"
edition = "2021"
authors = ["Lorenzo Delgado <lnsdev@proton.me>"]

[dependencies]
anyhow = "1.0.69"
bitflags = "1.3.2"
enr = { version = "0.7.0", features = ["ed25519", "k256"] }
multiaddr = { version = "0.17.0", default-features = false }

[dev-dependencies]
base64 = "0.20.0"
