[package]
name = "waku-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.30", features = ["derive"] }
futures = "0.3.25"
hex = "0.4.3"
libp2p = { version = "0.50.0", features = ["yamux", "mplex", "tcp", "tokio", "identify", "dns", "ping", "noise", "macros", "secp256k1"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
strum_macros = "0.24.3"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["sync", "rt", "macros"] }
void = "1.0.2"
waku-message = { version = "0.1.0", path = "../waku-message" }
waku-relay = { version = "0.1.0", path = "../waku-relay" }
