[package]
name = "waku-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { version = "4.2.7", features = ["derive"] }
futures = { workspace = true }
hex = "0.4.3"
libp2p = { workspace = true, features = ["yamux", "tcp", "tokio", "identify", "dns", "ping", "noise", "macros", "secp256k1"] }
libp2p-mplex = "0.39.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
strum_macros = "0.24.3"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
void = "1.0.2"
waku-core = { version = "0.1.0", path = "../waku-core" }
waku-relay = { version = "0.1.0", path = "../waku-relay" }
