[package]
name = "waku-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
libp2p = { version = "0.51.0", features = ["gossipsub", "macros"] }
prost = "0.11.6"
strum_macros = "0.24.3"
thiserror = "1.0.38"
waku-core = { version = "0.1.0", path = "../waku-core" }
