[package]
name = "waku-store"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
asynchronous-codec = "0.6.0"
bytes = "1.2.1"
futures = "0.3.24"
libp2p = { version = "0.48.0", features = ["dns-tokio", "tcp-tokio"] }
log = "0.4.17"
prost = "0.11.0"
thiserror = "1.0.37"
tokio = "1.21.2"
unsigned-varint = "0.7.1"
uuid = { version = "1.1.2", features = ["v4"] }
waku-core = { version = "0.1.0", path = "../waku-core" }

[dev-dependencies]
env_logger = "0.9.1"
