[package]
name = "waku-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "waku"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap = { version = "4.2.7", features = ["derive"] }
hex = "0.4.3"
libp2p.workspace = true
log = "0.4.17"
multiaddr = "0.17.1"
pretty_env_logger = "0.4.0"
tokio = { workspace = true, features = ["macros", "rt", "signal", "time"] }
ulid = "1.0.0"
waku-core = { version = "0.1.0", path = "../../waku-core" }
waku-node = { version = "0.1.0", path = "../../waku-node" }
waku-relay = { version = "0.1.0", path = "../../waku-relay" }
