[package]
name = "wakunode2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.2.7", features = ["derive", "env"] }
config = { version = "0.13.3", default-features = false, features = ["toml", "json", "json5", "yaml"] }
futures.workspace = true
hex = "0.4.3"
libp2p.workspace = true
log = "0.4.17"
multiaddr = "0.17.1"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.162", features = ["derive"] }
tokio = { workspace = true, features = ["signal", "rt", "macros"] }
waku-core = { version = "0.1.0", path = "../../waku-core" }
waku-node = { version = "0.1.0", path = "../../waku-node" }
